--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@formspree/react": "^2.4.4",
     "@swc/core": "^1.3.66",
     "@swc/wasm": "^1.3.66",
     "intersection-observer": "^0.12.2",
