--- a/package.json
+++ b/package.json
@@ -9,6 +9,10 @@
     "astro": "astro"
   },
   "dependencies": {
-    "astro": "^5.0.4"
+    "@astrojs/preact": "^4.0.0",
+    "@astrojs/tailwind": "^5.1.3",
+    "astro": "^5.0.4",
+    "preact": "^10.25.1",
+    "tailwindcss": "^3.4.16"
   }
 }
