--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,6 +9,7 @@
   ],
   "compilerOptions": {
     "jsx": "react-jsx",
-    "jsxImportSource": "preact"
+    "jsxImportSource": "preact",
+    "allowSyntheticDefaultImports": true
   }
 }
